--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -16,7 +16,7 @@ description = "Default layout"
         {% styles %}
     </head>
     <body>
-
+{% partial '/header' %}
 {% page %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
