--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -16,10 +16,11 @@ description = "Default layout"
         {% styles %}
     </head>
     <body>
-{% partial '/header' %}
+{% partial 'header' %}
 
 <div class="page">
 {% page %}
+    {% partial 'footer' %}
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
