--- a/partials/blog.htm
+++ b/partials/blog.htm
@@ -1,96 +1,36 @@
-    <section class="section" id="blog">
-        <div class="container">
+<div class="blog">
+    <div class="blog__item">
+        <div class="blog__header">
+            <a href="#">
+                <img class="blog__photo" src="assets/images/blog/1.jpg" alt="">
+            </a>
 
-            <div class="section__header">
-                <h3 class="section__suptitle">Our stories</h3>
-                <h2 class="section__title">Latest blog</h2>
+            <div class="blog__date">
+                <div class="blog__date-day">15</div>
+                Jan
+            </div>
+        </div>
+        <div class="blog__content">
+            <div class="blog__title">
+                <a href="#">Lorem ipsum dolor sit amet</a>
+            </div>
+            <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.
             </div>
 
-            <div class="blog">
-                <div class="blog__item">
-                    <div class="blog__header">
-                        <a href="#">
-                            <img class="blog__photo" src="assets/images/blog/1.jpg" alt="">
-                        </a>
-                        <div class="blog__date">
-                            <div class="blog__date-day">15</div>
-                            Jan
-                        </div>
-                    </div>
-                    <div class="blog__content">
-                        <div class="blog__title">
-                            <a href="#">Lorem ipsum dolor sit amet</a>
-                        </div>
-                        <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-                    </div>
-                    <div class="blog__footer">
-                        <div class="blog-stat">
+
+        </div>
+        <div class="blog__footer">
+            <div class="blog-stat">
                             <span class="blog-stat__item">
                                 <i class="far fa-eye"></i> 542
                             </span>
-                            <span class="blog-stat__item">
+                <span class="blog-stat__item">
                                 <i class="far fa-comment-dots"></i> 17
                             </span>
-                        </div>
-                    </div>
-                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- /.blog -->
 
-                <div class="blog__item">
-                    <div class="blog__header">
-                        <a href="#">
-                            <img class="blog__photo" src="assets/images/blog/2.jpg" alt="">
-                        </a>
-                        <div class="blog__date">
-                            <div class="blog__date-day">15</div>
-                            Jan
-                        </div>
-                    </div>
-                    <div class="blog__content">
-                        <div class="blog__title">
-                            <a href="#">Lorem ipsum dolor sit amet</a>
-                        </div>
-                        <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-                    </div>
-                    <div class="blog__footer">
-                        <div class="blog-stat">
-                            <span class="blog-stat__item">
-                                <i class="far fa-eye"></i> 542
-                            </span>
-                            <span class="blog-stat__item">
-                                <i class="far fa-comment-dots"></i> 17
-                            </span>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="blog__item">
-                    <div class="blog__header">
-                        <a href="#">
-                            <img class="blog__photo" src="assets/images/blog/3.jpg" alt="">
-                        </a>
-                        <div class="blog__date">
-                            <div class="blog__date-day">15</div>
-                            Jan
-                        </div>
-                    </div>
-                    <div class="blog__content">
-                        <div class="blog__title">
-                            <a href="#">Lorem ipsum dolor sit amet</a>
-                        </div>
-                        <div class="blog__text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-                    </div>
-                    <div class="blog__footer">
-                        <div class="blog-stat">
-                            <span class="blog-stat__item">
-                                <i class="far fa-eye"></i> 542
-                            </span>
-                            <span class="blog-stat__item">
-                                <i class="far fa-comment-dots"></i> 17
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- /.blog -->
-
-        </div><!-- /.container -->
-    </section>
